# nanogpt-120a

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/cuda-kernels/: Cargo.toml  build.rs  build_nvfp4_config.rs
crates/cuda-kernels/src/: attention.rs  embedding.rs  kernel_config.rs  kernel_ops.rs  layer_norm.rs  lib.rs  nvfp4_quant.rs
crates/cuda-kernels/src/gpt/: attention.rs  embedding.rs  layer_norm.rs  linear_backward.rs  lm_head.rs  loss.rs  mlp.rs  projection_postop.rs  residual.rs
crates/cuda-kernels/src/gpt/attention/: causal.rs  layout.rs  mod.rs  qkv_projection.rs  rope.rs
crates/cuda-kernels/src/gpt/layer_norm/: body.rs  kernels.rs  launcher.rs
crates/cuda-kernels/src/gpt/layer_norm_backward/: kernel.rs  mod.rs  param.rs  types.rs
crates/cuda-kernels/src/gpt/linear_backward/: args.rs  bias.rs  device_scale.rs  kernels.rs  ms_eden.rs
crates/cuda-kernels/src/gpt/lm_head/: kernels.rs
crates/cuda-kernels/src/gpt/logits/: argmax.rs  args.rs  kernels.rs  launcher.rs  mod.rs  ordering.rs  top_k.rs
crates/cuda-kernels/src/gpt/loss/: kernels.rs  launcher.rs
crates/cuda-kernels/src/ms_eden/: native_nvfp4_mma_downcast.func.ptx
crates/cuda-kernels/src/utils/: amax.rs  atomic.rs  block_reduce.rs  device_ptr.rs  f32_matrix_ops.rs  float_ptx.rs  inline_ptx.rs  kda_backward.rs  kda_common.rs  kda_elementwise.rs  kda_launch.rs  kda_tc.rs  kernel_ops.rs  launch.rs  layer_norm.rs  layer_norm_reduce.rs  nvfp4.rs  nvfp4_cast.rs  nvfp4_quant.rs  quartet.rs  shuffle.rs  transpose.rs  warp_reduce.rs
crates/cuda-kernels/tests/: causal_attention.rs  causal_attention_backward.rs  causal_attention_backward_tc.rs  causal_attention_log_sum_exp.rs  causal_attention_lse.rs  f16_tc_matmul.rs  f16_tc_matmul_tiled.rs  layer_norm.rs  layer_norm_backward.rs  layer_norm_backward_params.rs  linear_backward.rs  linear_backward_projection_cta.rs  lm_head.rs  loss.rs  ms_eden_transpose.rs  next_latent.rs  next_latent_concat_backward.rs  next_latent_gelu_backward.rs  next_latent_ops.rs  nvfp4_decode.rs  nvfp4_quant.rs  nvfp4_tc_matmul.rs  optimizer.rs  projection_tma.rs  residual_backward.rs  transpose.rs
crates/cuda-kernels/tests/causal_attention_backward/: check.rs  reference.rs  reference_math.rs  shape.rs
crates/cuda-kernels/tests/causal_attention_backward_tc/: case.rs  f16.rs  matmul_scratch.rs  reference.rs  scratch.rs  shape.rs
crates/cuda-kernels/tests/common/: f16_tc.rs  mod.rs  nvfp4.rs  nvfp4_tc.rs
crates/cuda-kernels/tests/layer_norm/: reference.rs  stats.rs
crates/cuda-kernels/tests/linear_backward/: ms_eden.rs  quartet.rs
crates/cuda-kernels/tests/linear_backward_projection_cta/: data.rs  fixture.rs
crates/cuda-kernels/tests/ms_eden_transpose/: fp32.rs  nvfp4.rs  rowwise.rs  support.rs
crates/cuda-kernels/tests/next_latent/: reference.rs
crates/cuda-kernels/tests/nvfp4_tc_matmul/: decode.rs  scratch.rs
crates/cuda-kernels/tests/optimizer/: adam.rs  assertions.rs  aurora.rs  embedding.rs  grad_clip.rs  polar_coefficients.rs  polar_gram_ns.rs  polar_nvfp4.rs  polar_reference.rs  polar_vector.rs
(+942 files in other folders)
