[package]
name = "rust-kernels"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/gpt2-bpe",
    "crates/gpt2-nvfp4",
    "crates/cuda-kernels",
    "crates/fineweb-prep",
]
resolver = "3"

[dependencies]
cuda-core = { git = "https://github.com/NVlabs/cuda-oxide.git", branch = "main" }
fineweb-prep = { path = "crates/fineweb-prep" }
gpt2-bpe = { path = "crates/gpt2-bpe" }
gpt2-nvfp4 = { path = "crates/gpt2-nvfp4" }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls"] }
rust-kernels-cuda = { path = "crates/cuda-kernels" }

[package.metadata.cuda-oxide]
device-crates = [
    { manifest-path = "crates/cuda-kernels/Cargo.toml", ptx-dir = "." },
]
