[package]
name = "rust-kernels"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/llama2-tokenizer",
    "crates/gpt2-nvfp4",
    "crates/cuda-kernels",
    "crates/synth-prep",
]
resolver = "3"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cuda-core = { git = "https://github.com/NVlabs/cuda-oxide.git", branch = "main" }
synth-prep = { path = "crates/synth-prep" }
llama2-tokenizer = { path = "crates/llama2-tokenizer" }
gpt2-nvfp4 = { path = "crates/gpt2-nvfp4" }
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "ttf"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls"] }
rust-kernels-cuda = { path = "crates/cuda-kernels" }
time = "0.3"
burn = { version = "0.21.0", default-features = false, features = ["std", "train", "tui"] }

[package.metadata.cuda-oxide]
device-crates = [
    { manifest-path = "crates/cuda-kernels/Cargo.toml", ptx-dir = "." },
]
